--- a/blog.html
+++ b/blog.html
@@ -80,7 +80,7 @@
             </div>
 
             <footer class="blog-footer">
-                <p>Blog created using with knowledge acquired from <a href="https://simplilearn.com/">Simplilearn</a> by Paoli Torres</p>
+                <p>Blog created using with knowledge acquired from <a href="https://simplilearn.com/">Simplilearn</a> by Paoli Torres!</p>
                 <p>
                   <a href="#">Back to top</a>
                 </p>
